# Janek-Wangrat

./: readme.md
c-program-compiler-web-aplication/: .coverage  db.sqlite3  manage.py  pyproject.toml  readme.md
c-program-compiler-web-aplication/aplikacjaWWW/: asgi.py  readme.md  settings.py  urls.py  wsgi.py
c-program-compiler-web-aplication/myapp/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
c-program-compiler-web-aplication/myapp/migrations/: 0001_initial.py  0002_catalog_parent_catalog.py  0003_file_parent_catalog.py  0004_alter_catalog_owner.py  0005_alter_file_owner_delete_user.py  0006_file_text.py  0007_remove_file_text_file_file.py  0008_remove_file_file_file_text.py  0009_remove_file_text_file_file.py  0010_alter_catalog_name_alter_file_name_and_more.py
c-program-compiler-web-aplication/uploads/: bonjour.c  debugging.txt  hel  helloworld  helloworld.c  simple_asm_c.c  testfile_wxhv0wm.asm  witajswiat.c  witajswiat_1rDqBWL.c
c-program-compiler-web-aplication/uploads/asm/: bonjour.asm  debugging.txt  debugging_MV58yVp.txt  helloworld.err  simple_asm_c.asm  testfile.asm  testfile_1svicKy.txt  testfile_2k1oK36.txt  testfile_3wvvcYF.txt  testfile_3zd9OYI.txt  testfile_6Qq1sr6.txt  testfile_6R39xaX.txt  testfile_8RC3CjH.txt  testfile_9YU6ysm.txt  testfile_9gVE8xw.txt  testfile_ASUS7ZQ.txt  testfile_BIiV5Dl.txt  testfile_FdPLq0z.txt  testfile_GKYtBs4.txt  testfile_Ia3sGnD.txt  testfile_Kf3o5LR.txt  testfile_L5GnWS0.txt  testfile_LBuUmp0.txt  testfile_LbNY14P.txt  testfile_Md4I1je.txt  testfile_MyfuC3f.txt  testfile_NnCfOLZ.txt  testfile_P76Qp7y.txt  testfile_RONss3G.txt  testfile_RQzEYzq.txt  testfile_RVMTSyO.txt  testfile_RX10bex.txt  testfile_TNDXLLJ.txt  testfile_TioeYxa.txt  testfile_UZ4k7VG.txt  testfile_VCo9awJ.txt  testfile_WkThOOh.txt  testfile_WmBLFsY.txt  testfile_XPiE23B.txt  testfile_XqS5fWv.txt  (+20 more)
interpreter-janeklang/janeklang/: CHANGELOG.md  Makefile  Makefile.bak  janeklang.cabal  janeklang.cf  run_test.sh
(+322 files in other folders)
