cabal-version:      2.4
name:               janeklang
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             janwan2003
maintainer:         janwan2003@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs: src
    exposed-modules:
        Janeklang.Abs
        Janeklang.ErrM
        Janeklang.Lex
        Janeklang.Par
        Janeklang.Print
        Janeklang.Skel
        Typechecker.Typechecker
        Typechecker.Utils
        Evaluator.Evaluator
        Exceptions
        Evaluator.Utils
        Interpreter
    build-depends:       
        base >=4.12 && <5,
        array,
        mtl,
        transformers,
        containers
    default-language:    Haskell2010
    default-extensions:  ImportQualifiedPost


executable janeklang
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base,
        array,
        janeklang
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:  ImportQualifiedPost
